<resources>
    <string name="app_name">MediRydes</string>
    <string name="api_key">AIzaSyBBACYd2WJyw3N5444qzKGUggNf6JeyVRo</string>

    <!--    Validation Messages-->
    <string name="password_policy">Password should be minimum 8 characters long, should contain at least one capital letter, one small letter, one number and one special character</string>
    <string name="name_validation_msg">Enter a valid name</string>
    <string name="email_validation_msg">Enter a valid email address</string>
    <string name="username_required_msg">Enter username</string>
    <string name="username_validation_msg">Enter a valid username</string>
    <string name="phone_validation_msg">Enter a valid phone number</string>
    <string name="location_validation_msg">Enter a valid location</string>
    <string name="zip_validation_msg">Enter a valid zip code</string>
    <string name="email_required_msg">Enter email address</string>
    <string name="name_required_msg">Enter name</string>
    <string name="phone_required_msg">Enter phone number</string>
    <string name="full_phone_required_msg">Enter correct phone number</string>
    <string name="location_required_msg">Enter location</string>
    <string name="zip_required_msg">Enter zip code</string>
    <string name="required_msg">Enter %1$s</string>
    <string name="validation_msg">Enter a valid %1$s</string>
    <string name="accept_validation_msg">Please accept terms and conditions</string>
    <string name="password">Password</string>

    <string name="enter_email_address">Enter email Address</string>
    <string name="enter_password">Enter password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="home">Home</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="future_shift">Future Schedule</string>
    <string name="profile">Profile</string>
    <string name="availability">Availability</string>
    <string name="today_s_shift">Today\'s Shift</string>
    <string name="history">History</string>
    <string name="furious_transportation">Furious Transportation</string>
    <string name="john">John</string>
    <string name="welcome">Welcome</string>
    <string name="trips">Trips</string>
    <string name="trips_">Trips:</string>
    <string name="start_">Start time:</string>
    <string name="end_">End time:</string>
    <string name="vehicle_id_">Vehicle ID:</string>
    <string name="you_can_begin_your_shift_in">You can begin your shift in</string>
    <string name="_1_hour_30_minutes">1 hour 30 minutes</string>
    <string name="start_shift">Start Shift</string>
    <string name="request_new_shift">Request New Shift</string>
    <string name="shift_begins_in">Shift begins in</string>
    <string name="shift_end_in">Shift finish in</string>
    <string name="inspection_checklist">Inspection Checklist</string>
    <string name="current_schedule">Current Schedule</string>
    <string name="vin">VIN#:</string>
    <string name="reports">Reports</string>
    <string name="request_time_off">Request Time off</string>
    <string name="orders">Orders</string>
    <string name="fuel">Fuel</string>
    <string name="end_shift">End Shift</string>
    <string name="from_">From:</string>
    <string name="to_">To:</string>
    <string name="ongoing_shift_10am_4pm">Ongoing Shift 10AM - 4PM</string>
    <string name="dashboard">Dashboard</string>
    <string name="fuel_receipt">Fuel Receipt</string>
    <string name="total_gallons">Total Gallons</string>
    <string name="price_gallon">Price/Gallon</string>
    <string name="vehicle_odometer">Vehicle Odometer</string>
    <string name="add_new">Add New</string>
    <string name="enter_total_gallons">Enter total gallons</string>
    <string name="current_vehicle_odometer">Current Vehicle Odometer</string>
    <string name="odometer">Odometer</string>
    <string name="upload_receipt">Upload Receipt</string>
    <string name="submit">Submit</string>
    <string name="service_breaks">Service Breaks</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="parking_and_break">Parking and break</string>
    <string name="services_mechanism">Services Mechanism</string>
    <string name="lighting_devices_amp_reflectors"><![CDATA[Lighting Devices & Reflectors]]></string>
    <string name="save_checklist">Save Checklist</string>
    <string name="_04_00_to_10_30_pm">04:00 - To 10:30 PM</string>
    <string name="_12_09_tuesday">12/09 Tuesday ,</string>
    <string name="trip_sequence">Trip Sequence</string>
    <string name="reroute_trips">Reroute Trips</string>
    <string name="trip_03">Trip#:03</string>
    <string name="pick_up_location">Pick-up Location:</string>
    <string name="note_detail"><b>Note:</b> You can Rearrange your trip sequence by dragging your trip upward/downward</string>
    <string name="note">Note:</string>
    <string name="confirm">Confirm</string>
    <string name="enter_company_code">Enter Company code</string>
    <string name="notifications">Notifications</string>
    <string name="pick_up_time">Pick-up Time:</string>
    <string name="drop_off_location">Drop-off Location:</string>
    <string name="edit_availability">Edit Availability</string>
    <string name="save">Save</string>
    <string name="monday">Monday</string>
    <string name="busy_all_days">Busy All Day</string>
    <string name="_00_00">00:00</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="no_notifications">No Notifications</string>
    <string name="price_in">Price in $</string>
    <string name="_20_10">20/10 ,</string>
    <string name="_10_00_am">10:00 AM</string>
    <string name="_123">123</string>
    <string name="_04_00_pm">04:00 PM</string>
    <string name="_02">02</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="personal_detail">Personal Detail</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="phone">Phone</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="enter_age">Enter Age</string>
    <string name="official_detail">Official Detail</string>
    <string name="transport">Transport</string>
    <string name="enter_transport_name">Enter Transport Name</string>
    <string name="client_id">Client Id</string>
    <string name="vehicle_id">Vehicle Id</string>
    <string name="enter_vehicle_id">Enter Vehicle Id</string>
    <string name="abc_abc_com">abc@abc.com</string>
    <string name="thursday_28_sep_2021">Thursday - 28 Sep 2021</string>
    <string name="customer_name">Customer name</string>
    <string name="taxi">Taxi</string>
    <string name="_490_delaware_ave_bufarlo_ny_123456">490, Delaware ave,Bufarlo ,NY 123456</string>
    <string name="taxi_type">Trip Type</string>
    <string name="n_a">N/A</string>
    <string name="age">Age</string>
    <string name="mobility_type_abc">Mobility Type: abc</string>
    <string name="lina_joy">Lina Joy</string>
    <string name="no_reports_list">No Reports list!</string>
    <string name="no_schedule">No Schedule!</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="start_trip">Start Trip</string>
    <string name="started">started</string>
    <string name="not_started">not started</string>
    <string name="completed">completed</string>
    <string name="complete_trip">Complete Trip</string>
    <string name="confirmation_number">Confirmation Number</string>
    <string name="licence_number">Licence number</string>


</resources>