<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".tripDetail.view.ScheduleTripDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/in_toll"
            layout="@layout/tab_bar" />

        <LinearLayout
            android:id="@+id/fragment_container_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/in_toll"
            android:layout_marginTop="-110dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_20sdp">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtDayDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/thursday_28_sep_2021"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp" />

                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_white_corner">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true"
                    android:paddingTop="@dimen/_30sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/_20sdp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:elevation="@dimen/_10sdp"
                            app:cardCornerRadius="@dimen/_10sdp">

                            <LinearLayout

                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:padding="@dimen/_10sdp">

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_regular"
                                        android:text="@string/customer_name"
                                        android:textColor="@color/title_text_color" />

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:id="@+id/txtRiderName"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_medium"
                                        android:text="@string/john"
                                        android:textColor="@color/black" />

                                </LinearLayout>

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1px"
                                    android:background="@color/title_text_color" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:padding="@dimen/_10sdp">

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_regular"
                                        android:text="@string/phone"
                                        android:textColor="@color/title_text_color" />

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:id="@+id/txtRiderPhone"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_medium"
                                        android:text="@string/_123"
                                        android:textColor="@color/black" />

                                </LinearLayout>
                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1px"
                                    android:background="@color/title_text_color" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:padding="@dimen/_10sdp">

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_regular"
                                        android:text="@string/pick_up_time"
                                        android:textColor="@color/title_text_color" />

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:id="@+id/txtPickupTime"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_medium"
                                        android:text="@string/_10_00_am"
                                        android:textColor="@color/black" />

                                </LinearLayout>
                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1px"
                                    android:background="@color/title_text_color" />
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:padding="@dimen/_10sdp">

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_regular"
                                        android:text="@string/confirmation_number"
                                        android:textColor="@color/title_text_color" />

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:id="@+id/txtConfirmationNumber"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_medium"
                                        android:text="@string/_123"
                                        android:textColor="@color/black" />

                                </LinearLayout>
                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1px"
                                    android:background="@color/title_text_color" />
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:padding="@dimen/_10sdp">

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_regular"
                                        android:text="@string/pick_up_location"
                                        android:textColor="@color/title_text_color" />

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:id="@+id/txtPickUpLocation"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_medium"
                                        android:text="@string/_490_delaware_ave_bufarlo_ny_123456"
                                        android:textColor="@color/black" />

                                </LinearLayout>
                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1px"
                                    android:background="@color/title_text_color" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:padding="@dimen/_10sdp">

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_regular"
                                        android:text="@string/drop_off_location"
                                        android:textColor="@color/title_text_color" />

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/txtDropLocation"
                                        android:fontFamily="@font/poppins_medium"
                                        android:text="@string/_490_delaware_ave_bufarlo_ny_123456"
                                        android:textColor="@color/black" />

                                </LinearLayout>
                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1px"
                                    android:background="@color/title_text_color" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:padding="@dimen/_10sdp">

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_regular"
                                        android:text="@string/taxi_type"
                                        android:textColor="@color/title_text_color" />

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:id="@+id/txtType"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_medium"
                                        android:text="@string/taxi"
                                        android:textColor="@color/black" />

                                </LinearLayout>

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnStartTrip"
                            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_55sdp"
                            android:layout_marginTop="20dp"
                            android:backgroundTint="@color/app_base_color"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/start_trip"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="17sp"
                            app:cornerRadius="@dimen/_10sdp"
                            app:rippleColor="@color/hint_text_color" />

                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>


            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <include layout="@layout/content_loading" />
</RelativeLayout>