<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20sdp">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/reports"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/bg_white_corner"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/from_"
                    android:textSize="@dimen/_11sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtFromDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@drawable/bg_date"
                    android:drawableEnd="@drawable/ic_date"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_5sdp"
                    android:singleLine="true"
                    android:hint="@string/from_date"
                    android:text=""
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/to_"
                    android:textSize="@dimen/_11sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtToDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@drawable/bg_date"
                    android:drawableEnd="@drawable/ic_date"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_5sdp"
                    android:text=""
                    android:hint="@string/to_date"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/llTitle"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp">

                <LinearLayout
                    android:id="@+id/txtNoList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_50sdp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:src="@drawable/empty"
                        app:tint="@color/black" />

                    <androidx.appcompat.widget.AppCompatTextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/no_reports_list"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvReports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_report_list">


                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <include layout="@layout/content_loading" />
</RelativeLayout>